force-app/main/default/objects/Mass_Action_Mapping__c/Mass_Action_Mapping__c.object-meta.xml
<CustomObject>
    <description>Defines field mappings between sources and targets.</description>
    <label>Mass Action Mapping</label>
    <nameField>
        <displayFormat>MAM-{000000}</displayFormat>
        <label>Mass Action Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Action Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>