force-app/main/default/objects/Mass_Action_Mapping__c/fields/Mass_Action_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Mass_Action_Configuration__c</fullName>
    <label>Mass Action Configuration</label>
    <referenceTo>Mass_Action_Configuration__c</referenceTo>
    <relationshipLabel>Mass Action Mappings</relationshipLabel>
    <relationshipName>Mass_Action_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>