force-app/main/default/objects/Mass_Action_Mapping__c/fields/Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Name__c</fullName>
    <description>API name of the source record to map to the target field. For example, the unique column name in a report or list view.</description>
    <inlineHelpText>API name of the source record to map to the target field. For example, the unique column name in a report or list view.</inlineHelpText>
    <label>Source Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>