force-app/main/default/objects/Mass_Action_Mapping__c/fields/Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Name__c</fullName>
    <description>API name of the target parameter to map to the source field. For example, the parameter name to a Flow.</description>
    <inlineHelpText>API name of the target parameter to map to the source field. For example, the parameter name to a Flow.</inlineHelpText>
    <label>Target Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>